# EPUB-to-Audiobook-CLI

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.sample.toml  epub2audio  pyproject.toml  test_metadata_structure.py
.github/workflows/: ci.yml
Documentations/: chunk_retry_split_design.md  development_plan.md  research_checklist.md
Documentations/research/: 02_epub_metadata_research.md  03_tts_model_research.md  05_m4b_packaging_research.md
documentation/: architecture_diagrams.md  cross-platform-support.md  developer_guide.md  development_plan.md
documentation/research/: 01_epub_parsing_research.md  04_loudness_normalization_research.md
src/epub2audio/: __init__.py  __main__.py  audio_cache.py  audio_processing.py  cli.py  config.py  doctor.py  epub_reader.py  error_log.py  interfaces.py  logging_setup.py  onnx_provider.py  packaging.py  pipeline.py  state_store.py  text_cleaner.py  text_segmenter.py  tts_engine.py  tts_engine_kokoro_onnx.py  tts_factory.py  tts_pipeline.py  utils.py
src/epub2audio/cli/: __init__.py  commands.py  main.py  parsers.py  progress.py  rendering.py
tests/: conftest.py  test_audio_cache.py  test_config.py  test_epub_reader.py  test_error_log.py  test_failure_cases.py  test_integration.py  test_interfaces.py  test_onnx_provider.py  test_packaging.py  test_pipeline_engine_settings.py  test_state_store.py  test_text_cleaner.py  test_text_segmenter.py  test_tts_engine_kokoro_onnx.py  test_tts_factory.py  test_tts_pipeline.py  test_utils.py
