[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub2audio"
version = "0.1.0"
description = "EPUB to Audiobook CLI"
requires-python = ">=3.10"

[project.scripts]
epub2audio = "epub2audio.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
