[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub2audio"
version = "0.1.0"
description = "EPUB to Audiobook CLI"
requires-python = ">=3.10"
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "huggingface_hub>=0.20",
]

[project.scripts]
epub2audio = "epub2audio.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
tts-kokoro = [
    "onnxruntime>=1.17",
    "misaki[en]>=0.9.4",
    "soundfile>=0.12",
    "kokoro-onnx>=0.4.9",
]
tts-mlx = [
    "mlx>=0.12",
    "mlx-audio>=0.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require ffmpeg and may be slow)"
]
